--- a/P010622.opf/meta.yml
+++ b/P010622.opf/meta.yml
@@ -1,7 +1,7 @@
-id: opecha:P010622
+id: P010622
 initial_creation_type: ocr
 source_metadata:
   id: bdr:W1KG15593
   title: དམ་པའི་ཆོས་མངོན་པ་མཛོད་ཀྱི་ཚིག་ལེའུར་བྱས་པའི་འགྲེལ་པ་མངོན་པའི་རྒྱན།
-  volume: ''
   author: ''
+  volumes: {}
