--- a/P010622.opf/layers/v001/Pagination.yml
+++ b/P010622.opf/layers/v001/Pagination.yml
@@ -1,5 +1,5 @@
 id: ad2c2f08c41c488bb03b3b90d56c6385
-annotation_type: pagination
+annotation_type: Pagination
 revision: '00001'
 annotations:
   a200e423fc8b4a85b7cb87f55fd3572c:
